@@ -1,3 +1,8 @@
+2003-06-10  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/name_storage.h: minor tidy
+	* libutil++/unique_storage.h: small efficiency improvement
+
 2003-06-09  John Levon  <levon@movementarian.org>
 
 	* pp/Makefile.am:
